streaming works. pins assigned

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
 set(EXTRA_COMPONENT_DIRS "")
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(esp_xiao_cam_server)
+project(rover)
+spiffs_create_partition_image(littlefs web FLASH_IN_PROJECT)
